@@ -23,6 +23,8 @@ Application Changes:
 - Added a helper reference to show how many free spells have been used by mastery qualities.
 - Qualities marked as not having levels no longer show a stray "1" next to their names when added to characters' sheets.
 - Character sheet viewers and character export forms now update their contents whenever the character obtains something.
+- Armor mods and gear that come included with an item can no longer be unequipped independently of said item.
+- Ammunition loaded into a weapon is now forced to be equipped and cannot be unequipped.
 
 Data Changes:
 - Added bonus nodes for Shooter (The Soldier) paragon's Compiling dice pool penalty and +1 limit for attack actions. Fixes #4935.
